--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 					REYES BARBER
 		</title>
 		<link rel="shortcut icon" href="imagenes/logo.png">
-		 <link rel="stylesheet" href="css/Estilo.css">
+		 <link rel="stylesheet" href="css/estilo.css">
 		 <script src="https://kit.fontawesome.com/0c3d596076.js" crossorigin="anonymous"></script>
 	</head>
 	<body> 
