--- a/html/CONTACTO.html
+++ b/html/CONTACTO.html
@@ -5,7 +5,7 @@
 		     REYES BARBER
 		 </title>
 		 <link rel="shortcut icon" href="imagenes/logo.png">
-		 <link rel="stylesheet" href="../css/Estilo.css">
+		 <link rel="stylesheet" href="../css/estilo.css">
 	 </head>
 	 <body>
 	 <center>
