--- a/html/ideas.html
+++ b/html/ideas.html
@@ -6,7 +6,7 @@
 		</title>
 		<!-- El siguiente codigo es para poner una imagen en la pestana -->
 		<link rel="shortcut icon" href="../imagenes/logo.png">
-		<link rel="stylesheet" href="../css/Estilo.css">
+		<link rel="stylesheet" href="../css/estilo.css">
 	</head>
 	<!-- El bg es para el color de la pagina el # lo tengo en la pagina que nos dio el maestro -->
 	<body>
