--- a/html/SERVICIOS.html
+++ b/html/SERVICIOS.html
@@ -50,7 +50,7 @@
 			</div>	
 			<div class="caja">
 			<a href="Disenopersonalizado.html">
-					<img src="../imagenes/vista2.png"
+					<img src="../imagenes/Diseñopersonalizado.jpg"
 					class="img-producto">
 				</a>
 				<div class="caja-texto">	
@@ -72,7 +72,7 @@
 				
 				<div class="caja">
 				<a href="Taperfade.html">
-					<img src="../imagenes/fade1.png"
+					<img src="../imagenes/Taperfade.jpg"
 					class="img-producto">
 				</a>
 				<div class="caja-texto">
